# django-discordo

./: .pre-commit-config.yml  LICENSE  Makefile  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/django_discordo/: __init__.py  handler.py  tests.py
tests/: conftest.py  settings.py  test_handler.py
