[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-discordo"
version = "0.1.0"
description = "Discord webhook handler for Django logging"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Evan Chen", email = "evan@evanchen.cc" }
]
keywords = ["django", "discord", "logging", "webhook", "handler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
requires-python = ">=3.8"
dependencies = [
    "django>=3.2",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/vEnhance/django-discordo"
Repository = "https://github.com/vEnhance/django-discordo"
Issues = "https://github.com/vEnhance/django-discordo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/django_discordo"]

[tool.hatch.version]
path = "src/django_discordo/__init__.py"
