[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "django-discordo"
version = "1.0.0"
description = "Discord webhook handler for Django logging"
repository = "https://github.com/vEnhance/django-discordo"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Evan Chen", email = "evan@evanchen.cc" }
]
keywords = ["django", "discord", "logging", "webhook", "handler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
django = [
    "django>=3.2",
]

[dependency-groups]
dev = [
    "django>=3.2",
    "prek>=0.2.19",
    "pytest>=8.0",
    "pytest-django>=4.5",
]

[project.urls]
Homepage = "https://github.com/vEnhance/django-discordo"
Repository = "https://github.com/vEnhance/django-discordo"
Issues = "https://github.com/vEnhance/django-discordo/issues"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
